feat : apply best practices